# powerbi-theme-wizard

./: hello.py  pyproject.toml
src/colors/: color_extraction.py
src/frontend/: app.py
