[project]
name = "powerbi-theme-wizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colormath>=3.0.0",
    "colorthief>=0.2.1",
    "matplotlib>=3.10.0",
    "pillow>=11.1.0",
    "plotly>=5.24.1",
    "streamlit>=1.41.1",
    "taskipy>=1.14.1",
]


[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
streamlit run src/frontend/app.py
"""
